# dependamerge

./: .gitignore  .gitlint  .pre-commit-config.yaml  .prettierignore  CHANGES_SUMMARY.md  README.md  REUSE.toml  SECURITY.md  pyproject.toml  pytest.ini
.github/: dependabot.yml  release-drafter.yml
.github/dependabot/: zizmor-requirements.txt
.github/workflows/: autolabeler.yaml  build-test-release.yaml  build-test.yaml  codeql.yaml  codeql.yml  integration-test.yaml  openssf-scorecard.yaml  release-drafter.yaml  zizmor.yaml
docs/: MERGE_ENGINE_DESIGN.md  ORG_WIDE_BULK_MERGE.md
scripts/: demo_wait_ticker.py
src/dependamerge/: __init__.py  bot_identity.py  cli.py  cli_clean.py  copilot_handler.py  git_ops.py  github2gerrit_detector.py  github_async.py  github_client.py  github_graphql.py  github_service.py  gitreview.py  merge_manager.py  models.py  output_utils.py  pr_comparator.py  progress_tracker.py  rebase.py  resolve_conflicts.py  slot_lease.py  url_parser.py
src/dependamerge/engine/: __init__.py  ladder.py  model.py  reconciler.py  scheduler.py
src/dependamerge/gerrit/: comparator.py  models.py  service.py
tests/: __init__.py  conftest.py  test_approve_on_demand.py  test_auto_merge.py  test_base_branch_resolution.py  test_behind_pr_handling.py  test_blocked_masks_behind.py  test_bot_identity.py  test_cli.py  test_dependabot_recreate.py  test_external_merge_race.py  test_fix_verification.py  test_force_levels.py  test_functionality_changes.py  test_gerrit_comparator.py  test_gerrit_models.py  test_gerrit_service.py  test_git_ops_askpass.py  test_github_client.py  test_gitreview.py  test_local_rebase_signing.py  test_merge_conflict_handling.py  test_merge_dispatch_lock.py  test_merge_state_tracking.py  test_mergeability_refresh.py  test_org_and_user_caches.py  test_org_merge.py  test_output_utils.py  test_owner_account_resolution.py  test_pr_comparator.py  test_precommit_ci_trigger.py  test_progress_ticker.py  test_reactive_behind_recovery.py  test_repo_merge.py  test_required_approval_detection.py  test_slot_lease.py  test_status_command.py  test_strict_status_checks.py  test_stripe_scheduler.py  test_stuck_check_detection.py  (+4 more)
tests/engine/: __init__.py  test_engine_ladder.py  test_engine_reconciler.py  test_engine_scheduler.py
tests/integration/: conftest.py  test_live_gerrit.py  test_live_github.py
